--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,17 @@
 .full-height {
     height: 100vh;
 }
+
+.text-justify {
+    text-align: justify;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.imgDefault {
+    height: 175px;
+    aspect-ratio: auto 175 / 175;
+    width: 175px;
+}
